--- a/code/informob-kmp/shared/src/androidMain/AndroidManifest.xml
+++ b/code/informob-kmp/shared/src/androidMain/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Informob"
         tools:targetApi="32">
         <activity
-            android:name=".MainActivity"
+            android:name=".side.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Informob">
